<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activitys.login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="209dp"
        android:layout_height="201dp"
        android:contentDescription="@string/matus"
        android:src="@drawable/matus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="280dp"
        android:layout_height="298dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">
    <TextView
        android:id="@+id/textView"
        android:layout_width="264dp"
        android:layout_height="47dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/roboto_black"
        android:text="Registro MatusApp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="45dp"
        android:autofillHints="@string/correo"
        android:hint="@string/correo"
        android:textColorHint="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:boxStrokeErrorColor="@color/colorRed"
        app:boxStrokeWidth="1dp"
        app:startIconContentDescription="@string/content_description_end_icon"
        app:startIconDrawable="@drawable/ic_baseline_mail_24"
        app:startIconTint="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="344dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="266dp"
        android:layout_height="60dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="70dp"
        android:hint="contraseña"
        android:textColorHint="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:boxStrokeErrorColor="@color/colorRed"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconContentDescription="@string/content_description_end_icon"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorPrimaryDark"
        app:startIconTint="@color/colorPrimaryDark">>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="77dp"
            android:text="Registrarme"
            android:textColor="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="119dp"
            tools:layout_editor_absoluteY="50dp" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="77dp"
            android:text="Ingresar"
            android:textColor="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="119dp"
            tools:layout_editor_absoluteY="50dp" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>